examples/invalid/semanticErr/declaration/basicTypeErr07.wacc
# type mismatch: char <- int
# Output:
# #semantic error#

#Program:#

begin
  char c = 1
end
